--- a/www/index.html
+++ b/www/index.html
@@ -237,7 +237,7 @@ function cancelEdit(postId) {
     postElement.find('textarea').val('');
 }
 
-// 投稿の更新：バグ入りなので要修正（更新せずに削除してしまう）
+// 投稿の更新
 function updatePost(postId) {
     const contentVal = $(`#edit-${postId}`).val();
     if (!validateContent(contentVal)) return;
@@ -248,7 +248,7 @@ function updatePost(postId) {
         updatedAt: firebase.database.ServerValue.TIMESTAMP
     };
 
-    postsRef.child(postId).remove()
+    postsRef.child(postId).update(updates)
         .then(() => {
             showMessage('投稿を更新しました');
             $(`#post-${postId}`).removeClass('editing');
